okd-deploy/testblog-deployment.yaml
---
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: blog-frontend
  annotations:
    
spec:
  selector:
    matchLabels:
      app: blog-frontend
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: blog-frontend
        tier: frontend
    spec:
      containers:
      - name: blog-frontend
        image: docker.io/spcsenti2023/okdtutorial:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
